# VoxelEngine

./: Cargo.toml
assets/shaders/: cube.wgsl  line.wgsl  vertex.wgsl
src/: block.rs  buffer.rs  camera.rs  chunk.rs  direction.rs  global.rs  main.rs  renderer.rs  texture.rs  triangle.wgsl  uniforms.rs  vertex.rs  vertex.wgsl
src/renderer/: atlas.rs  buffer.rs  camera.rs  cube.rs  instance.rs  mesh.rs  mod.rs  pipelines.rs  texture.rs  ui.rs  uniforms.rs  vertex.rs  world.rs
src/renderer/mesh/: block.rs  mod.rs  quad.rs  vertex.rs
src/scene/: camera.rs  mod.rs
src/ui/: mod.rs
src/world/: chunk.rs
voxgen/: Cargo.toml
voxgen/benches/: meshgen_benchmark.rs
voxgen/src/: block.rs  core.rs  direction.rs  ecs.rs  engine.rs  lib.rs  renderer.rs  window.rs
voxgen/src/renderer/: atlas.rs  buffer.rs  debug.rs  quad.rs  texture.rs  ui.rs  vertex.rs  world.rs
voxgen/src/renderer/mesh/: line.rs  mod.rs  quad.rs  vertex.rs
voxgen/src/renderer/pipelines/: debug.rs  mod.rs  voxel.rs
voxgen/src/scene/: camera.rs  mod.rs
voxgen/src/ui/: mod.rs
voxgen/src/world/: chunk.rs  chunk_manager.rs  mod.rs
