[package]
name = "voxgen"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
wgpu = "0.16.0"
winit = "0.28.3"
pollster = "0.3.0"
vek = "0.15.10"

[dependencies.bytemuck]
version = "1.13.1"
features = ["derive"]

[dependencies.image]
version = "0.24.6"
default-features = false
features = ["jpeg", "png"]
