[package]
name = "voxgen"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
env_logger = "0.10.0"
log = "0.4.17"
wgpu = "0.16.0"
winit = "0.28.3"
pollster = "0.3.0"
vek = "0.15.10"
# UI
egui = "0.21.0"
egui_wgpu_backend = "0.23.0"
egui_winit_platform = "0.18.0"
rayon = "1.7.0"
bevy_ecs = "0.10.1"

[dependencies.bytemuck]
version = "1.13.1"
features = ["derive"]

[dependencies.image]
version = "0.24.6"
default-features = false
features = ["jpeg", "png"]

[dev-dependencies]
criterion = "0.4.0"

[[bench]]
name = "meshgen_benchmark"
harness = false
